[Fix] Get user info response schema
